[package]
name = "wasmcloud-component-adapters"
version = "0.12.0"
description = "wasmCloud component adapters"
authors = ["The wasmCloud Team"]
categories = ["wasm"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/wasmCloud/wasmcloud-component-adapters"

[badges.maintenance]
status = "actively-developed"

[dependencies]
wasi-preview1-component-adapter-provider = { workspace = true }

[workspace.dependencies]
wasi-preview1-component-adapter-provider = { version = "23.0.1", default-features = false }
